[gd_scene load_steps=19 format=2]

[ext_resource path="res://Pot/pot.glb" type="PackedScene" id=1]
[ext_resource path="res://Pot/Pot.gd" type="Script" id=2]
[ext_resource path="res://Pot/mat_pot_black.tres" type="Material" id=3]
[ext_resource path="res://Pot/mat_liquid.tres" type="Material" id=4]
[ext_resource path="res://Pot/mat_pot_border.tres" type="Material" id=5]
[ext_resource path="res://Pot/mat_wood.tres" type="Material" id=6]
[ext_resource path="res://Pot/mat_bubbles.tres" type="Material" id=7]

[sub_resource type="PlaneMesh" id=4]
material = ExtResource( 4 )
size = Vector2( 1, 1 )

[sub_resource type="SphereMesh" id=6]
material = ExtResource( 7 )
radius = 0.05
height = 0.1
radial_segments = 6
rings = 3

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, -0.0904658, 0, 0, Vector2( 1, 0.5 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.501768, 0.584637, 0.505738 )

[sub_resource type="Animation" id=2]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pot/Border:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spoon:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Spoon:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Spoon:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Stir"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Spoon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 11.762 ), Vector3( 0, -20.449, 5.881 ), Vector3( -7.00873e-08, -26.8526, 2.3524 ), Vector3( 0, 0, 2.878 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spoon:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1, 1.3, 1.5, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -0.178942, -7.15256e-08, -0.305843 ), Vector3( -0.298236, -1.19209e-07, -0.36321 ), Vector3( -0.437808, -1.04308e-07, -0.264058 ), Vector3( -0.499113, -8.19564e-08, 0.0220228 ), Vector3( -0.423552, -5.73695e-08, 0.267193 ), Vector3( -0.249556, -4.09782e-08, 0.295637 ), Vector3( -0.062996, -1.63913e-08, 0.185166 ), Vector3( 0.070394, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pot/Border:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spoon:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Spoon:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Spoon:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "hiteffect"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.05, 1.05, 1.05 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=11]
material = SubResource( 10 )
size = Vector2( 0.1, 0.1 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.469613, 0.98895 )
colors = PoolColorArray( 0.890196, 0.164706, 0.164706, 1, 0.772549, 0.541176, 0.298039, 0.643137, 1, 0.944, 0.52, 0.501961 )

[node name="Pot" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Pot" parent="." index="0"]
material/0 = ExtResource( 3 )

[node name="Border" parent="Pot" index="0"]
material/0 = ExtResource( 5 )

[node name="CSGCombiner" type="CSGCombiner" parent="Pot" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.58, 0 )

[node name="Liquid" type="CSGMesh" parent="Pot/CSGCombiner" index="0"]
mesh = SubResource( 4 )

[node name="CSGTorus" type="CSGTorus" parent="Pot/CSGCombiner" index="1"]
operation = 2
inner_radius = 0.465315
outer_radius = 0.874868
sides = 16
ring_sides = 4

[node name="LiquidParticles" type="CPUParticles" parent="Pot" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.378275, 0 )
emitting = false
mesh = SubResource( 6 )
emission_shape = 1
emission_sphere_radius = 0.3
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.05
linear_accel = 3.0
linear_accel_random = 1.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 7 )

[node name="PotLight" type="OmniLight" parent="Pot" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.488494, 0 )
visible = false
light_bake_mode = 0
omni_range = 0.508589
omni_attenuation = 0.5

[node name="Spoon" parent="." index="1"]
material/0 = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.586445, 0 )
shape = SubResource( 1 )

[node name="AnimSpoon" type="AnimationPlayer" parent="." index="3"]
anims/RESET = SubResource( 2 )
anims/Stir = SubResource( 3 )

[node name="AnimPot" type="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 8 )
anims/hiteffect = SubResource( 9 )

[node name="FireParticles" type="CPUParticles" parent="." index="5"]
transform = Transform( 1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0.00470111, 0 )
emitting = false
amount = 20
mesh = SubResource( 11 )
emission_shape = 2
emission_box_extents = Vector3( 0.5, 0, 0.5 )
direction = Vector3( 0, 1, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.01
linear_accel = 1.5
linear_accel_random = 1.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 7 )
color_ramp = SubResource( 12 )
